fixing tablet spacing

--- a/module2/style.css
+++ b/module2/style.css
@@ -118,7 +118,6 @@ p {
 /*Tablet Device Setup*/
 @media (min-width: 768px) and (max-width: 991px) {
   .col-tab-1, .col-tab-2, .col-tab-3, .col-tab-4, .col-tab-5, .col-tab-6, .col-tab-7, .col-tab-8, .col-tab-9, .col-tab-10, .col-tab-11, .col-tab-12 {
-    width: 100%;
     float: left;
     border: 2px solid black; 
     background-color: grey;
@@ -141,7 +140,7 @@ p {
     width: 41.66%;
   }
   .col-tab-6 {
-    width: 50%;
+    width: 45%;
   }
   .col-tab-7 {
     width: 58.33%;
